--- a/scripts/analysis-household-income.Rmd
+++ b/scripts/analysis-household-income.Rmd
@@ -22,6 +22,7 @@ library(dplyr)
 library(foreign)
 library(reticulate)
 library(haven)
+library(ggmap)
 #use_condaenv('numlinalg')
 #numpy <- import('numpy')
 #rasterio <- import('rasterio')
